--- a/jenkins-master-s2i-template.yaml
+++ b/jenkins-master-s2i-template.yaml
@@ -14,7 +14,7 @@ parameters:
 - description: Git source URI for Jenkins S2I
   name: SOURCE_REPOSITORY_URL
   required: true
-  value: https://github.com/siamaksade/jenkins-s2i-example.git
+  value: https://github.com/blargism/ph-sus-table-s2i-build.git
 - description: Git branch/tag reference
   name: SOURCE_REPOSITORY_REF
   value: master
@@ -29,7 +29,7 @@ parameters:
   displayName: Jenkins Password
   generate: expression
   name: JENKINS_PASSWORD
-  value: password
+  value: asdf1234
 - description: Volume space available for data, e.g. 512Mi, 2Gi.
   displayName: Volume Capacity
   name: VOLUME_CAPACITY
